--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -26,7 +26,7 @@
             android:id="@+id/imageView_user_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:avatar="@{conversation.contact.imageUrl}"
+            app:avatar="@{conversation.contact}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -63,7 +63,7 @@
             android:layout_marginStart="@dimen/normal_margin"
             android:ellipsize="end"
             android:lines="1"
-            android:text="@{conversation.contact.displayName}"
+            app:name="@{conversation.contact}"
             app:layout_constraintEnd_toStartOf="@id/textView_hora"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/imageView_user_image"
@@ -78,7 +78,7 @@
             android:layout_marginTop="@dimen/x_small_margin"
             android:ellipsize="end"
             android:lines="1"
-            app:nickname="@{conversation.contact.nickname}"
+            app:nickname="@{conversation.contact}"
             android:textColor="@color/buttonTint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
