--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -31,4 +31,8 @@
     <string name="text_refuse">Rifiutare</string>
     <string name="text_information">INFORMAZIONI</string>
     <string name="text_nickname">Soprannome</string>
+    <string name="text_delete_conversation">Elimina la conversazione</string>
+    <string name="text_mute_conversation">Conversazione muta</string>
+    <string name="text_block_contact">Blocca contatto</string>
+
 </resources>
