--- a/app/src/main/res/layout/add_contact_item.xml
+++ b/app/src/main/res/layout/add_contact_item.xml
@@ -26,7 +26,7 @@
             android:layout_marginStart="@dimen/normal_margin"
             android:layout_marginTop="@dimen/normal_margin"
             android:layout_marginBottom="@dimen/normal_margin"
-            app:avatar="@{contact.imageUrl}"
+            app:avatar="@{contact}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -52,7 +52,7 @@
                 android:layout_marginBottom="@dimen/x_small_margin"
                 android:ellipsize="end"
                 android:lines="1"
-                android:text="@{contact.displayName}"
+                app:name="@{contact}"
                 app:layout_constraintBottom_toTopOf="@+id/textView_user_nickname"
                 app:layout_constraintEnd_toStartOf="@id/viewSwitcher"
                 app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="@id/textView_user_name"
                 app:layout_constraintStart_toStartOf="@id/textView_user_name"
                 app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
-                app:nickname="@{contact.nickname}"
+                app:nickname="@{contact}"
                 tools:text="@tools:sample/first_names" />
 
             <ViewSwitcher
