--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -31,4 +31,9 @@
     <string name="text_refuse">Ablehnen</string>
     <string name="text_information">INFORMATIONEN</string>
     <string name="text_nickname">Spitzname</string>
+    <string name="text_delete_conversation">Konversation löschen</string>
+    <string name="text_mute_conversation">Gespräch stumm schalten</string>
+    <string name="text_block_contact">Kontakt blockieren</string>
+
+
 </resources>
