--- a/app/src/main/res/values-en/contact_profile.xml
+++ b/app/src/main/res/values-en/contact_profile.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="delete_conversation">Delete conversation</string>
-    <string name="silence_conversation">Mute conversation</string>
-    <string name="restore_contact">Restore contact</string>
+    <string name="text_reset_contact">Restore contact</string>
+    <string name="text_want_delete_conversation">You sure you want to delete this conversation?</string>
+    <string name="text_want_reset_contact">You sure you want to reestablish contact?</string>
+    <string name="text_want_mute_conversation">Tem certeza de que quer contato restabelecer?</string>
+    <string name="text_alert_nickname">The nickname must contain at least 5 and up to 20 characters</string>
+    <string name="text_alert_name">The name must contain at least 3 and maximum 50 characters</string>
+    <string name="text_name_invalid">Invalid Nickname</string>
+    <string name="text_nickname_invalid">Apodo no válido</string>
+
 </resources>
