--- a/app/src/main/res/values-en/general.xml
+++ b/app/src/main/res/values-en/general.xml
@@ -31,4 +31,9 @@
     <string name="text_refuse">Refuse</string>
     <string name="text_information">INFORMATION</string>
     <string name="text_nickname">Nickname</string>
+    <string name="text_delete_conversation">Delete conversation</string>
+    <string name="text_mute_conversation">Mute conversation</string>
+    <string name="text_block_contact">Block contact</string>
+
+
 </resources>
