NS-558, NS-546, NS-541

--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -30,4 +30,7 @@
     <string name="text_sent">Enviado</string>
     <string name="text_refuse">Rechazar</string>
     <string name="text_information">INFORMACIÓN</string>
+    <string name="text_delete_conversation">Eliminar conversación</string>
+    <string name="text_block_contact">Bloquear contacto</string>
+
 </resources>
