--- a/app/src/main/res/values/contact_profile.xml
+++ b/app/src/main/res/values/contact_profile.xml
@@ -6,6 +6,7 @@
     <string name="text_want_mute_conversation">Tem certeza de que quer contato restabelecer?</string>
     <string name="text_alert_nickname">The nickname must contain at least 5 and up to 20 characters</string>
     <string name="text_alert_name">The name must contain at least 3 and maximum 50 characters</string>
-    <string name="text_name_invalid">Invalid Nickname</string>
-    <string name="text_nickname_invalid">Apodo no válido</string>
+    <string name="text_name_invalid">Invalid Name</string>
+    <string name="text_nickname_invalid">Invalid Nickname</string>
+
 </resources>
