--- a/app/src/main/res/layout/contact_profile_fragment.xml
+++ b/app/src/main/res/layout/contact_profile_fragment.xml
@@ -65,7 +65,7 @@
                     android:id="@+id/textView_information"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:background="@color/sectionColor"
+                    android:background="?attr/attrBackgroundSectionColor"
                     android:inputType="textCapCharacters"
                     android:padding="@dimen/normal_padding"
                     android:text="@string/text_information"
@@ -190,7 +190,7 @@
                     android:id="@+id/textView_general"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:background="@color/sectionColor"
+                    android:background="?attr/attrBackgroundSectionColor"
                     android:padding="@dimen/normal_padding"
                     android:text="@string/text_general"
                     app:layout_constraintEnd_toEndOf="parent"
