--- a/app/src/main/res/layout/contacts_fragment.xml
+++ b/app/src/main/res/layout/contacts_fragment.xml
@@ -14,6 +14,7 @@
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/attrBackgroundColorBackground"
         tools:context=".ui.contacts.ContactsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,6 +48,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:itemCount="5"
                         tools:listitem="@layout/contacts_item" />
 
                 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
