--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -23,7 +23,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorBackground"
+                android:background="?attr/attrBackgroundColorBackground"
                 tools:context=".ui.profile.ProfileFragment">
 
                 <!-- HEADER -->
@@ -175,7 +175,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="fitCenter"
-                        android:tint="@color/colorSecondaryDark"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -186,10 +186,10 @@
                         android:id="@+id/imageButton_name_option_end_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
-                        android:tint="@color/colorSecondaryDark"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -252,7 +252,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="fitCenter"
-                        android:tint="@color/colorSecondaryDark"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -266,7 +266,7 @@
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
-                        android:tint="@color/colorSecondaryDark"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -327,7 +327,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:scaleType="fitCenter"
-                        android:tint="@color/colorSecondaryDark"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -340,7 +340,7 @@
                         android:layout_height="32dp"
                         android:background="?attr/selectableItemBackgroundBorderless"
                         android:scaleType="fitCenter"
-                        android:tint="@color/colorSecondaryDark"
+                        android:tint="?attr/attrTintColorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
