--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -13,6 +13,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/attrBackgroundColorBackground"
         tools:context=".ui.securitySettings.SecuritySettingsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,7 +26,7 @@
                 style="@style/SmallBodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/sectionColor"
+                android:background="?attr/attrBackgroundSectionColor"
                 android:padding="@dimen/normal_padding"
                 android:text="@string/text_general"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -107,9 +108,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_arrow_right_primary"
-                    app:thumbTint="@color/thumb_color"
-                    app:trackTint="@color/track_color" />
+                    app:srcCompat="@drawable/ic_arrow_right_primary" />
 
                 <!-- OPTION TITLE -->
                 <TextView
@@ -177,7 +176,7 @@
                 style="@style/SmallBodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/sectionColor"
+                android:background="?attr/attrBackgroundSectionColor"
                 android:padding="@dimen/normal_padding"
                 android:text="@string/text_security"
                 app:layout_constraintEnd_toEndOf="parent"
