--- a/app/src/main/res/drawable/bg_incoming_message.xml
+++ b/app/src/main/res/drawable/bg_incoming_message.xml
@@ -7,14 +7,14 @@
         android:pivotY="0%"
         android:toDegrees="0" >
         <shape android:shape="rectangle" >
-            <solid android:color="@color/sectionColor" />
+            <solid android:color="?attr/attrBackgroundSectionColor" />
             <corners android:radius="@dimen/minor_radius"/>
         </shape>
     </rotate>
 </item>
 <item android:left="12dp">
     <shape android:shape="rectangle" >
-        <solid android:color="@color/sectionColor" />
+        <solid android:color="?attr/attrBackgroundSectionColor" />
         <corners android:radius="@dimen/minor_radius" />
     </shape>
 </item>
