--- a/app/src/main/res/drawable/bg_incoming_message_rounded.xml
+++ b/app/src/main/res/drawable/bg_incoming_message_rounded.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:start="12dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/sectionColor" />
+            <solid android:color="?attr/attrBackgroundSectionColor" />
             <corners android:radius="@dimen/minor_radius" />
         </shape>
     </item>
