--- a/app/src/main/res/drawable/bg_input_panel.xml
+++ b/app/src/main/res/drawable/bg_input_panel.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/sectionColor" />
+    <solid android:color="?attr/attrBackgroundSectionColor" />
     <corners android:radius="@dimen/small_margin" />
 
 </shape>
