--- a/app/src/main/res/drawable/bg_white_with_separator.xml
+++ b/app/src/main/res/drawable/bg_white_with_separator.xml
@@ -3,13 +3,13 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/separator" />
+            <solid android:color="?attr/attrSeparatorColor" />
         </shape>
     </item>
 
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorBackground" />
+            <solid android:color="?attr/attrBackgroundColorBackground" />
         </shape>
     </item>
 
