--- a/app/src/main/res/drawable/bg_with_line.xml
+++ b/app/src/main/res/drawable/bg_with_line.xml
@@ -9,7 +9,7 @@
 
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorBackground" />
+            <solid android:color="?attr/attrBackgroundColorBackground" />
         </shape>
     </item>
 
