--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                         android:id="@+id/toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?android:attr/actionBarSize"
-                        android:background="@color/colorPrimary"
+                        android:background="?attr/attrBackgroundColorPrimary"
                         android:elevation="@dimen/elevation"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
                     android:id="@+id/screenSaver"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@color/colorBackground"
+                    android:background="?attr/attrBackgroundColorBackground"
                     android:elevation="30dp"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -107,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@color/colorBackground"
+            android:background="?attr/attrBackgroundColorBackground"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/chat_drawer_header"
             app:menu="@menu/main_chat_menu" />
