--- a/app/src/main/res/layout/add_contact_friendship_request_received.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_received.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
-            android:textColor="@color/buttonTint"
+            android:textColor="?attr/attrColorButtonTint"
             app:layout_constraintEnd_toEndOf="@id/textView_user_name"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
@@ -94,7 +94,7 @@
                 android:textAlignment="textStart"
                 android:textAllCaps="true"
                 app:icon="@drawable/ic_check_primary"
-                app:iconTint="@color/buttonTint" />
+                app:iconTint="@color/green" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
