--- a/app/src/main/res/layout/color_scheme_fragment.xml
+++ b/app/src/main/res/layout/color_scheme_fragment.xml
@@ -7,22 +7,143 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.colorScheme.ColorSchemeFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_themes"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:itemCount="30"
-            tools:listitem="@layout/color_scheme_item" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton_save_configuration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/normal_margin"
+                        android:layout_marginBottom="@dimen/normal_margin"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:padding="@dimen/x_small_padding"
+                        android:scaleType="center"
+                        android:tint="@color/colorSecondaryDark"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:srcCompat="@drawable/ic_edit_black" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:id="@+id/text_section_system_themes"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="?attr/attrBackgroundSectionColor"
+                    android:inputType="textCapCharacters"
+                    android:padding="@dimen/normal_padding"
+                    android:text="@string/text_section_system_themes"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                    tools:ignore="TextViewEdits" />
+
+                <RadioGroup
+                    android:id="@+id/radioGroup_theme"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_section_system_themes">
+
+                    <RadioButton
+                        android:id="@+id/radioButton_light_napoleon"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_light_napoleon" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_dark_napoleon"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_dark_napoleon" />
+
+                    <TextView
+                        android:id="@+id/text_section_dark_themes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/attrBackgroundSectionColor"
+                        android:inputType="textCapCharacters"
+                        android:padding="@dimen/normal_padding"
+                        android:text="@string/text_section_dark_themes"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                        tools:ignore="TextViewEdits" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_black_gold_alloy"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_black_gold_alloy" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_cold_ocean"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_cold_ocean" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_camouflage"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_camouflage" />
+
+                    <TextView
+                        android:id="@+id/text_section_light_themes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/attrBackgroundSectionColor"
+                        android:inputType="textCapCharacters"
+                        android:padding="@dimen/normal_padding"
+                        android:text="@string/text_section_light_themes"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                        tools:ignore="TextViewEdits" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_purple_bluebonnets"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_purple_bluebonnets" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_pink_dream"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_pink_dream" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_clear_sky"
+                        style="@style/RadioButtonTheme"
+                        android:text="@string/text_theme_clear_sky" />
+
+                </RadioGroup>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
