--- a/app/src/main/res/layout/help_fragment.xml
+++ b/app/src/main/res/layout/help_fragment.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/attrBackgroundColorBackground"
         tools:context=".ui.help.HelpFragment">
 
         <!-- OPTION CONTACT US -->
