--- a/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
+++ b/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBackground"
+        android:background="?attr/attrBackgroundColorBackground"
         android:minHeight="56dp"
         tools:context=".ui.imagePicker.ImageSelectorBottomSheetFragment">
 
